# Robot-Controller

./: .gitignore  mujoco_wsl_digital_twin_plan.docx
calibration_results/fixtures/: README.md  tactile_load_adapter.scad
calibration_results/tactile_20260710/: INVALID_collision_drift_left_up_20260710_202904.bag.active  PRECHECK_clipped_mn_drift_left_up_20260710_203428.bag  drift_summary.yaml
calibration_results/tactile_20260712/: slip_summary.yaml
devel/: .catkin
devel/include/alicia_duo_driver/: ArmJointState.h
devel/include/alicia_flexible_grasp_supervisor/: CartesianJog.h  CartesianJogRequest.h  CartesianJogResponse.h  GraspState.h  ObjectPose.h  SafetyState.h  SetFloat.h  SetFloatRequest.h  SetFloatResponse.h  SetForceParams.h  SetForceParamsRequest.h  SetForceParamsResponse.h  SetJointCommand.h  SetJointCommandRequest.h  SetJointCommandResponse.h  SetTargetPose.h  SetTargetPoseRequest.h  SetTargetPoseResponse.h  StartGrasp.h  StartGraspRequest.h  StartGraspResponse.h  StopGrasp.h  StopGraspRequest.h  StopGraspResponse.h  TactileFrame.h  TactileState.h  TcpCalibrationCommand.h  TcpCalibrationCommandRequest.h  TcpCalibrationCommandResponse.h  TriggerZero.h  TriggerZeroRequest.h  TriggerZeroResponse.h
devel/lib/alicia_d_driver/: alicia_d_driver_node  alicia_d_hw_interface_node
devel/lib/alicia_duo_driver/: serial_server_node
devel/lib/alicia_duo_ros_control/: hardware_interface_node  test_serial_read_node
devel/lib/alicia_flexible_grasp_supervisor/: tcp_calibration_node.py
devel/lib/easy_handeye/: publish.py  robot.py
devel/lib/pkgconfig/: alicia_d_calibration.pc  alicia_d_descriptions.pc  alicia_d_drag_teaching.pc  alicia_d_driver.pc  alicia_d_moveit.pc  alicia_d_object_sort.pc  alicia_duo_descriptions.pc  alicia_duo_drag_teaching.pc  (+8 more)
src/Alicia-D-SDK-use/: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
src/Alicia-D-SDK-use/.github/ISSUE_TEMPLATE/: bug-report---问题报告.md  feature-request---功能请求.md  question---问题.md
src/Alicia-D-SDK-use/alicia_d_sdk/: __init__.py
src/Alicia-D-SDK-use/alicia_d_sdk/api/: __init__.py  synria_robot_api.py
src/Alicia-D-SDK-use/alicia_d_sdk/execution/: __init__.py  drag_teaching.py  trajectory_executor.py
src/Alicia-D-SDK-use/alicia_d_sdk/hardware/: __init__.py  data_parser.py  serial_comm.py  servo_driver.py
src/Alicia-D-SDK-use/alicia_d_sdk/utils/: __init__.py  fps_utils.py  trajectory_utils.py
src/Alicia-D-SDK-use/alicia_d_sdk/utils/logger/: __init__.py  beauty_logger.py
src/Alicia-D-SDK-use/docs/: api_reference.md  api_reference_en.md  examples.md  examples_en.md  installation.md  installation_en.md  logger_levels.md  logger_levels_en.md
src/Alicia-D-SDK-use/examples/: 00_demo_read_version.py  01_torque_switch.py  02_demo_set_new_zero.py  03_demo_read_state.py  04_demo_move_gripper.py  05_demo_move_joint.py  06_demo_forward_kinematics.py  07_demo_inverse_kinematics.py  08_demo_drag_teaching.py  09_demo_joint_traj.py  10_demo_cartesian_traj.py  11_benchmark_read_joints.py  12_utmostFPS.py
src/Alicia-D-SDK-use/tests/: test_robocore_v250_compatibility.py
src/Electronic-Skin-ML/: .gitignore  README.md  pyproject.toml
src/Electronic-Skin-ML/examples/: 01_demo_quickstart.py  02_demo_calibration.py  03_demo_configuration.py  04_demo_read_pressure.py  05_demo_record_pressure.py  06_demo_recover_calibration.py  07_demo_test_fps.py  08_demo_zero_baseline.py  09_demo_baseline_initialization.py  10_demo_read_calibration.py
src/Electronic-Skin-ML/examples/sdk/: __init__.py  constants.py  crc16.py  modbus_rtu.py  sdk.py
src/Electronic-Skin-ML/tactile_sdk/: __init__.py  client.py  exceptions.py  models.py
src/Electronic-Skin-ML/tactile_sdk/api/: __init__.py  base.py  calibration_api.py  config_api.py  device_api.py  pressure_api.py
src/Electronic-Skin-ML/tactile_sdk/protocol/: __init__.py  constants.py  crc16.py  modbus_rtu.py
src/Electronic-Skin-ML/tactile_sdk/transport/: __init__.py  crc16.py  serial_transport.py
src/alicia_flexible_grasp_supervisor/: CMakeLists.txt  README.md
src/real-arm/: .gitignore  README.md  README_CN.md  README_en.md  camera_test.py
src/real-arm/alicia_d_driver/: CMakeLists.txt  README.md  package.xml
src/real-arm/alicia_d_driver/config/: controllers.yaml  joint_names.yaml
src/real-arm/alicia_d_driver/include/alicia_d_driver/: alicia_d_driver_node.hpp  alicia_d_hw_interface.h  serial_communicator.hpp
src/real-arm/alicia_d_driver/launch/: alicia_d_bringup.launch  alicia_d_driver.launch
src/real-arm/alicia_d_driver/scripts/: arm_control_test.py
src/real-arm/alicia_d_driver/src/: alicia_d_driver_node.cpp  alicia_d_driver_node.cpp.bak_baudrate_param  alicia_d_driver_node.cpp.bak_sdk_protocol  alicia_d_hw_interface.cpp  alicia_d_hw_main.cpp  serial_communicator.cpp  src.code-workspace
src/real-arm/alicia_d_object_sort/: CMakeLists.txt  README.md  README_CN.md
src/real-arm/alicia_d_object_sort/scripts/: camera_a4_to_base.py  camera_obj_detection.py  camera_open.py  cube_sorting.py  cube_sorting_v1.py  object_camera_pose.py  usb_handeyecalibration_eye_on_hand.yaml
src/real-arm/alicia_duo_driver/: CMakeCache.txt  CMakeLists.txt  package.xml
src/real-arm/alicia_duo_driver/include/serial_server_node/: serial_server_node.h
src/real-arm/alicia_duo_driver/launch/: serial_server.launch
src/real-arm/alicia_duo_driver/msg/: ArmJointState.msg
src/real-arm/alicia_duo_driver/src/: serial_server_node.cpp  serial_server_node_main.cpp
src/real-arm/alicia_duo_ros_control/: CMakeLists.txt  package.xml
src/real-arm/alicia_duo_ros_control/include/: alicia_hw.h  serial_comm_helper.h
src/real-arm/alicia_duo_ros_control/launch/: serial_commu.launch
src/real-arm/alicia_duo_ros_control/scripts/: pid_tuner_gui.py  tune_pid.py
src/real-arm/alicia_duo_ros_control/src/: alicia_hw.cpp  hardware_interface_node.cpp  serial_comm_helper.cpp  test_serial_read_main.cpp
srv/: SetForceParams.srv  SetJointCommand.srv  SetTargetPose.srv
tools/: graspnet_baseline_server.py  mujoco_digital_twin_server.py  start_graspnet_baseline_server_wsl.sh  start_mujoco_digital_twin_wsl.sh
(+468 files in other folders)
