<?xml version="1.0"?>
<package format="2">
  <name>alicia_d_driver</name>
  <version>0.1.0</version>
  <description>The alicia_d_driver package for controlling the Alicia-D robot arm.</description>
  <maintainer email="xuanya@todo.todo">xuanya</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  
  <depend>serial</depend>
</package>