<?xml version="1.0"?>
<package format="2">
  <name>alicia_duo_driver</name>
  <version>1.0.0</version>
  <description>C++ implementation of serial server node</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  
  
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-rospy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>