<?xml version="1.0"?>
<package format="2">
  <name>alicia_duo_ros_control</name>
  <version>0.0.0</version>
  <description>The alicia_duo_ros_control package</description>

  <maintainer email="xuanya@todo.todo">xuanya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>alicia_duo_driver</build_depend>
  <exec_depend>alicia_duo_driver</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
